2007-06-08  Christian Persch  <chpe@gnome.org>

	* macros2/gnome-autogen.sh: Don't print warning about missing
	arguments if we're not going to run configure. Bug #445584, patch by
	"Cygwin Ports maintainer" (yselkowitz%40users.sourceforge.net).

2007-06-06  Christian Persch  <chpe@gnome.org>

	* doc-build/gnome-doc-common.in: Add datarootdir substitution.

2007-04-09  Christian Persch  <chpe@gnome.org>

	* configure.in: Bump version to 2.19.0.

2007-04-09  Christian Persch  <chpe@gnome.org>

	=== Release 2.18.0 ===

	* autogen.sh: Use automake 1.9.
	* configure.in: Bump version. Dist as .tar.bz2.

2007-01-29  Mariano Suárez-Alvarez  <mariano@gnome.org>

	Bug 377185 – Hide cmp output in autogen.sh

	* macros2/gnome-autogen.sh: Do not show cmp's output.

2007-01-29  Christian Persch  <chpe@svn.gnome.org>

	* macros2/gnome-compiler-flags.m4:
	Fix --enable-cxx-warnings checks. Bug #360693.

2007-01-12  Shaun McCance  <shaunm@gnome.org>

	* macros2/gnome-autogen.sh:
	- Fix for #377175 by skipping NO-AUTO-GEN directories, by Christian Persch

2007-01-11  Christian Persch  <chpe@svn.gnome.org>

	* macros2/gnome-autogen.sh: Default to AM 1.9. Bug #323868, patch by
	Christian Kirbach.

2007-01-11  Christian Persch  <chpe@svn.gnome.org>

	* macros2/gnome-common.m4: Define more deprecation symbols.
	Bug #343441.

2006-12-01  Kjartan Maraas  <kmaraas@gnome.org>

	* macros2/gnome-autogen.sh: Make automake 1.10 work too.

2006-10-20  Bastien Nocera  <hadess@hadess.net>

	* macros2/gnome-autogen.sh: exit from the check_m4macros function as
	soon as we have detected some undefined macros, rather than leaving
	the developer wondering what the problem is

2006-05-10  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-common.spec.in: Fix a typo.

2006-03-10  James Henstridge  <james@jamesh.id.au>

	* macros2/gnome-autogen.sh (configure_files): skip directories
	called "_darcs", similar to the handling of other VCS metadata
	dirs.  Fixes bug #321860.
